Development Version

- Fix for portfolio pages when single column selected

Portfolio Press 1.2.2

- Fix for image alignment bug (introduced in 1.2)

Portfolio Press 1.2.1

- Fix for JS error that causes scripts to break

Portfolio Press 1.2

- Front end customizer support
- Additional layout option (single column)
- Better CSS for captions and images
- Filterable titles
- Upsell link for Portfolio+ on options page

Portfolio Press 1.1

- Responsive design
- Updated styling

Portfolio Press 1.0

- Fix for search.php template
- Fix for pagination in portfolio page template

Portfolio Press 0.9

- Paging bug fixes for portfolio items
- Fix for missing blockquote image
- Removed portfolio post type code
- Replaced portfolio taxonomy templates with archive-portfolio
- Renamed loop.php to content.php
- Added post format support for quotes, images, and galleries
- Renamed scripts files

Portfolio Press 0.8

- WordPress 3.1 or higher is now required
- Updated Spanish translations from Eduardo Larequi
- German translations added by Sandro Bauer
- Added Russian translations from Alexander (http://k-notes.ru)
- Removed Simple Custom Post Type Archives Plugin
- Added support for Portfolio Post Type plugin
- Updated overlay bug for full width portfolio
- Simplified code for portfolio content
- Added print stylesheet to style.css
- Updated portfolio taxonomy tags
- Added template for portfolio categories
- Removed wp_title filtering

Portfolio Press 0.7.5

- Fixes menu placement option
- Fixes menu styling for widget areas
- Fixes styling in iOS devices
- Fixes left column layout in portfolio pages
- Updates icons in options panel
- Fixes for comment display on single.php
- Added option for displaying portfolio archives full width
- Merged css reset into main stylesheet

Portfolio Press 0.7.4

- Paging bug fixes when portfolio is set as home page
- Checkbox fixes for options panel
- Styling changes to selected menu parent in drop down
- Option for changing header color
