@@ -1,6 +1,8 @@
 Development Version
 
 - Fix for portfolio pages when single column selected
+- Allow image galleries to display in archives
+- Fix for plugin notices
 
 Portfolio Press 1.2.2
 
